# VSC-CMake-CXX-Project-Template

./: .clangd  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-auto-format-and-commit.yml  ci-build-and-test.yml
.templates/: gen_project.py
.templates/common/: .clangd  ruff.toml
.templates/common/.github/workflows/: ci-auto-format-and-commit.yml
.templates/common/cmake/compilers/: cuda-compiler-configs.cmake  cxx-compiler-configs.cmake
.templates/common/cmake/libraries/: libcuda.cmake  libpython.cmake  libspdlog.cmake  libtorch.cmake
.templates/common/cmake/utils/: common.cmake  logging.cmake
.templates/common/scripts/: build.bat  msvc-bash.bat  msvc-setup.bat
.templates/cuda_exe/: CMakeLists.txt
.templates/cuda_exe/include/_template_project_name_/math/: vec_add.hpp
.templates/cuda_exe/scripts/: build.sh
.templates/cuda_exe/src/: CMakeLists.txt  main.cpp  vec_add.cu
.templates/cuda_lib/: CMakeLists.txt
.templates/cuda_lib/cmake/: cmake-parameters.md
.templates/cuda_lib/include/_template_project_name_/math/: vec_add.hpp
.templates/cuda_lib/lib/cpu/: CMakeLists.txt  vec_add.cpp
.templates/cuda_lib/lib/cuda/: CMakeLists.txt  vec_add.cu
.templates/cuda_lib/scripts/: build.sh
.templates/cuda_lib/test/: CMakeLists.txt  test_vec_add.cpp
.templates/cxx_exe/: CMakeLists.txt
.templates/cxx_exe/cmake/: cmake-parameters.md
.templates/cxx_exe/include/_template_project_name_/math/: vec_add.hpp
.templates/cxx_exe/scripts/: build.sh
.templates/cxx_exe/src/: CMakeLists.txt  main.cpp  vec_add.cpp
.templates/cxx_lib/: CMakeLists.txt
.templates/cxx_lib/cmake/: cmake-parameters.md
.templates/cxx_lib/include/_template_project_name_/math/: vec_add.hpp
.templates/cxx_lib/include/_template_project_name_/utils/: address.hpp
.templates/cxx_lib/scripts/: build.sh
.templates/cxx_lib/test/: CMakeLists.txt  test_vec_add.cpp
.templates/reset/.github/workflows/: ci-auto-format-and-commit.yml  ci-build-and-test.yml
cmake/libraries/: libcuda.cmake  libtorch.cmake
cmake/utils/: compiler-configs-cpp.cmake  compiler-configs-cuda.cmake  compiler-configs-host.cmake  compiler-configs.cmake  lib-install.cmake  logging.cmake  run-python.cmake  variables.cmake
include/project-name/cuda/: logging.cuh
include/project-name/math/: vec_add.hpp
include/project-name/utils/: address.hpp
include/vsc-cpp-template/: vec_add.hpp
include/vsc-cpp-template/cuda/: logging.cuh
include/vsc-cpp-template/math/: vec_add.hpp
include/vsc-cpp-template/utils/: address.hpp
include/vsc-cpp-template/utils/cuda/: address.cuh  logging.cuh
lib/: CMakeLists.txt  vec_add.cu
lib/cpu/: CMakeLists.txt  vec_add.cpp
lib/cuda/: CMakeLists.txt  vec_add.cu
scripts/: build.bat  build.sh  setup-msvc.bat  setvcvars.bat  setvcvars.sh
templates/: gen_project.py
templates/common/: .clangd
templates/common/.github/workflows/: ci-build-and-test.yml
templates/common/cmake/compilers/: cxx-compiler-configs.cmake
templates/common/cmake/libraries/: libcuda.cmake  libtorch.cmake
templates/common/cmake/utils/: run-python.cmake
templates/common/scripts/: format.sh  windows-prune-PATH.sh
templates/cuda_exe/: CMakeLists.txt
templates/cuda_exe/scripts/: build.sh
templates/cuda_lib/include/_template_project_name_/math/: vec_add.hpp
templates/cuda_lib/include/_template_project_name_/utils/: address.hpp
templates/cuda_lib/lib/cuda/: vec_add.cu
templates/cuda_lib/test/: CMakeLists.txt
templates/cxx_cuda_exe/include/_template_project_name_/math/: vec_add.hpp
templates/cxx_cuda_exe/include/_template_project_name_/utils/: address.hpp
templates/cxx_cuda_exe/src/: test_vec_add.cpp  vec_add.cpp
templates/cxx_cuda_lib/: CMakeLists.txt
templates/cxx_cuda_lib/include/_template_project_name_/math/: vec_add.hpp
templates/cxx_cuda_lib/scripts/: build.sh
templates/cxx_exe/: CMakeLists.txt
templates/cxx_exe/include/_template_project_name_/math/: vec_add.hpp
templates/cxx_exe/scripts/: build.sh
templates/cxx_exe/src/: test_vec_add.cpp  vec_add.cpp
templates/cxx_lib/: CMakeLists.txt
templates/cxx_lib/include/_template_project_name_/: _api.hpp
templates/cxx_lib/include/_template_project_name_/math/: vec_add.hpp
templates/cxx_lib/lib/: vec_add.cpp
templates/cxx_lib/scripts/: build.sh
test/: CMakeLists.txt  main.cpp
